--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>alexzubkoff.github.io</title>
 </head>
 <body>
-    <h1>Hello GitHub pages!</h1>
+    <h1>Hello, GitHub pages!</h1>
 </body>
 </html>
